--- a/index.css
+++ b/index.css
@@ -20,3 +20,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: azure;
 }
+.foot p{
+    color: rgb(252, 0, 0);
+    text-align: center;
+}
